# mente

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
db/: init.sql
src/: db_logging.rs  lib.rs  main.rs  personality.rs  scraper.rs
src/openai/: chat_context.rs  chat_gpt.rs  mod.rs
