[package]
name = "mente"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "talk"
path = "bin/talk.rs"

[[bin]]
name = "mental_chatter"
path = "bin/mental_chatter.rs"

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
dotenv = "0.15"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time"] }
uuid = { version = "1.3", features = ["v4"] }